tests/unit/language/errors/assert_fail.arche
// RUN: %arche build -o %t %s && %t; test $? -eq 1
main :: proc() {
  printf("before\n");
  assert(0, "assertion failed\n");
  printf("after\n");
}
